--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
-requests
+Flask
 pandas
-python-dotenv
+requests
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
